--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,10 @@
 runtime: nodejs22
-instance_class: F1
 env: standard
+instance_class: F1
+
+# Añadimos esto para resolver el Warning y forzar un refresco de cuotas
+automatic_scaling:
+  min_instances: 0
+  max_instances: 1
+  target_cpu_utilization: 0.65
+  entrypoint: node app.js
